--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=3001 node bin/www"
+    "start": "node bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
