--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.6.13",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
