--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "redis": "^2.8.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
